# action-plan

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yml
src/: main.rs  middlewares.rs  routes.rs  server.rs
src/handlers/: tasks.rs  users.rs
src/utils/: hash.rs  mod.rs  token.rs
