[package]
name = "action-plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features= ["headers"] }
bcrypt = "0.14.0"
chrono = "0.4.25"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_with = "3.0.0"
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.28.0", features = ["full"] }
validator = { version = "0.15", features = ["derive"] }
